--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.7",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "postcss": "^8.4.47",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.0.7",
+    "tailwindcss": "^3.4.13",
+    "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.4.37",
     "vue-router": "4"
   },
   "devDependencies": {
-    "vite-plugin-mkcert": "^1.17.6",
     "@vitejs/plugin-vue": "^5.1.2",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-mkcert": "^1.17.6"
   }
 }
