--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/vue3": "^6.1.15",
     "@primevue/themes": "^4.0.7",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
