--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@primevue/themes": "^4.0.7",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "moment": "^2.30.1",
     "postcss": "^8.4.47",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
