--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "moment": "^2.30.1",
+    "moment-range": "^4.0.2",
     "postcss": "^8.4.47",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
