--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "moment-range": "^4.0.2",
     "postcss": "^8.4.47",
     "primeicons": "^7.0.0",
+    "primelocale": "^1.3.0",
     "primevue": "^4.0.7",
     "tailwindcss": "^3.4.13",
     "tailwindcss-primeui": "^0.3.4",
