--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "primeicons": "^7.0.0",
     "primelocale": "^1.3.0",
     "primevue": "^4.0.7",
+    "sass-embedded": "^1.83.4",
     "tailwindcss": "^3.4.13",
     "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.4.37",
