Error logger einbauen (#161)
* add error logging
* add error logger; fix slack message send
* add log rotation

--- a/config/config.yaml.dist
+++ b/config/config.yaml.dist
@@ -4,6 +4,10 @@ database:
 jwt:
   secret: jwt_secret
 
+error:
+  file: log/errors.log
+  logLevel: error
+
 slack:
   token:
   broadcast_channel:
